Add sample app, release tracking, and CI workflows
- Added `DemoApp` sample project to demonstrate analyzer diagnostics
- Enhanced analyzer `.csproj` with NuGet metadata and release tracking files
- Refactored analyzer registration for dynamic invocation analysis
- Introduced `.editorconfig` for diagnostic severity configuration
- Added GitHub Actions for build/test and release/NuGet publish
- Improved solution structure with `samples` folder and build configs

--- a/src/DimonSmart.DynamicLeakAnalyzer/DimonSmart.DynamicLeakAnalyzer.csproj
+++ b/src/DimonSmart.DynamicLeakAnalyzer/DimonSmart.DynamicLeakAnalyzer.csproj
@@ -7,14 +7,23 @@
 
     <IsRoslynAnalyzer>true</IsRoslynAnalyzer>
     <IsPackable>true</IsPackable>
+    <PackageType>Analyzer</PackageType>
+    <DevelopmentDependency>true</DevelopmentDependency>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <EnableAnalyzerReleaseTracking>true</EnableAnalyzerReleaseTracking>
 
     <PackageId>DimonSmart.DynamicLeakAnalyzer</PackageId>
+    <Title>DimonSmart.DynamicLeakAnalyzer</Title>
     <Version>0.1.0</Version>
     <Authors>DimonSmart</Authors>
+    <Company>DimonSmart</Company>
     <Description>Roslyn analyzer that detects unintended dynamic leaks (implicit dynamic conversions and var inferred as dynamic).</Description>
+    <PackageProjectUrl>https://github.com/DimonSmart/DynamicLeakAnalyzer</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/DimonSmart/DynamicLeakAnalyzer</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <PackageTags>roslyn;analyzer;dynamic</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <!-- <RepositoryUrl>https://github.com/DimonSmart/DimonSmart.DynamicLeakAnalyzer</RepositoryUrl> -->
 
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -34,6 +43,11 @@
     <None Include="buildTransitive\\**\\*.*" Pack="true" PackagePath="buildTransitive\\" />
     <None Include="..\\..\\README.md" Pack="true" PackagePath="" Condition="Exists('..\\..\\README.md')" />
     <None Include="..\\..\\LICENSE" Pack="true" PackagePath="" Condition="Exists('..\\..\\LICENSE')" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="AnalyzerReleases.Shipped.md" />
+    <AdditionalFiles Include="AnalyzerReleases.Unshipped.md" />
   </ItemGroup>
 
 </Project>
