--- a/src/DimonSmart.DynamicLeakAnalyzer/DimonSmart.DynamicLeakAnalyzer.csproj
+++ b/src/DimonSmart.DynamicLeakAnalyzer/DimonSmart.DynamicLeakAnalyzer.csproj
@@ -28,8 +28,10 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
-    <!-- Keep analyzer DLL only in analyzers/ -->
-    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <!-- Keep analyzer DLL only in analyzers/ while still generating symbols -->
+    <IncludeBuildOutput>true</IncludeBuildOutput>
+    <DefaultAllowedOutputExtensionsInPackageBuildOutputFolder>.none</DefaultAllowedOutputExtensionsInPackageBuildOutputFolder>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder></AllowedOutputExtensionsInPackageBuildOutputFolder>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
   </PropertyGroup>
 
